--- a/_partials/_pages/_construcao.scss
+++ b/_partials/_pages/_construcao.scss
@@ -98,6 +98,12 @@ Meida Queries  768px
 =====================================================
 */
 @media (min-width: 768px) {
+  .Content {
+    padding: 40px 200px;
+  }
+  .Form {
+    padding: 15px 140px 70px;
+  }
 }
 // 768px
 
